...
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="Add/Update your email address"
                android:layout_marginRight="@dimen/dimen_login"/>

            <EditText
                android:id="@+id/login_email"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:hint="Email"
                android:inputType="textEmailAddress"
                android:layout_margin="@dimen/dimen_login"
                style="@style/FullWidthEditText"
                />




            <Button
                android:id="@+id/button_login"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Save"
                android:layout_marginTop="@dimen/dimen_login"
                android:layout_marginRight="@dimen/dimen_login"
                android:layout_marginLeft="@dimen/dimen_login"
...
